2015-12-09  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	* libm/machine/arm/s_ceil.c: Also check that 64bit FP instructions are
	available in the guard.
	* libm/machine/arm/s_floor.c: Likewise.
	* libm/machine/arm/s_nearbyint.c: Likewise.
	* libm/machine/arm/s_rint.c: Likewise.
	* libm/machine/arm/s_round.c: Likewise.
	* libm/machine/arm/s_trunc.c: Likewise.

2015-12-08  Corinna Vinschen  <corinna@vinschen.de>

	* libc/stdio/fclose.c (_fclose_r): Make _flockfile/_funlockfile calls
	dependent on __SNLK flag.
	* libc/stdio/findfp.c (__fp_lock): Ditto.
	(__fp_unlock): Ditto.
	* libc/stdio/freopen.c (_freopen_r): Ditto.
	* libc/stdio64/freopen64.c (_freopen64_r): Ditto.

2015-12-08  Corinna Vinschen  <corinna@vinschen.de>

	* libc/stdio/freopen.c (_freopen_r): Only reset __SWID bit per SUSv4.
	* libc/stdio64/freopen64.c (_freopen64_r): Add missing resetting of
	flag values and _mbstate.

2015-12-07  Nick Withers  <nick.withers@anu.edu.au>

	* libc/sys/arm/sys/param.h (NBBY): Define if not already defined.
	* libc/sys/rtems/include/sys/param.h (NBBY): Define.

2015-12-07  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/sys/types.h: Move definitions of NBBY and howmany to
	sys/param.h.  Move definitions of select(2) macros to sys/select.h.
	* libc/include/sys/param.h: See above.
	* libc/include/sys/select.h: Move Cygwin's sys/select.h here.

2015-11-26  Corinna Vinschen  <corinna@vinschen.de>

	* libc/stdlib/strtodg.c: Add ifdef to check _HAVE_LONG_DOUBLE and
	_LDBL_EQ_DBL.

2015-11-24  Steve Ellcey  <sellcey@imgtec.com>

	* libc/stdlib/strtorx.c: Fix ifdef to check _LDBL_EQ_DBL.

2015-11-23  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* libc/machine/arm/strlen-stub.c: Adjust strlen-armv7.S selection logic.
	* libc/machine/arm/strlen.S: Likewise.

2015-11-23  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* libc/machine/arm/strlen-stub.c: Move T2 -O2 implementation to...
	* libc/machine/arm/strlen-thumb2-Os.S: New file.